k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: work-app
  namespace: lab6
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: work-app
  template:
    metadata:
      labels:
        app: work-app
    spec:
      imagePullSecrets:
      - name: registry-auth
      containers:
      - name: work-app
        image: registry:443/work-app:__IMAGE_TAG__
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: work-app
  namespace: lab6
  labels:
    app: work-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: work-app
  type: ClusterIP
