k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: work-app-ingress
  namespace: lab6
spec:
  ingressClassName: traefik
  rules:
  - host: app-lab6.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: work-app
            port:
              number: 80
